examples/manifests/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: kube-example
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
    tier: mysql
  type: ClusterIP 
  ports:
  - name: db
    port: 3306
    targetPort: db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: kube-example
  labels:
    app: wordpress   # 和 Pod 的标签没有关系
    tier: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
      containers:
      - image: mysql:5.6
        name: mysql
        imagePullPolicy: IfNotPresent
        args:
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
